--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "doctrine/orm": "2.6.*"
+        "doctrine/orm": "2.6.*",
+        "aura/router": "^3.1",
+        "zendframework/zend-diactoros": "^1.7"
     },
     "autoload":{
         "psr-4":{
