--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "doctrine/orm": "2.6.*",
         "aura/router": "^3.1",
-        "zendframework/zend-diactoros": "^1.7"
+        "zendframework/zend-diactoros": "^1.7",
+        "slim/php-view": "^2.2"
     },
     "autoload":{
         "psr-4":{
