install instructions in to README.md

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "psr-4":{
             "Curso\\":"src"
         }
+    },
+    "scripts": {
+        "serve": "php -S localhost:8888 -t public"
     }
 
 }
